fixing spacing of words

--- a/Meet The Team/Meet The Team.css
+++ b/Meet The Team/Meet The Team.css
@@ -82,43 +82,6 @@ html{
     transition:all 1s ease;
 }
 
-/*
-#bg {
-    position: fixed; 
-    top: -50%; 
-    left: -50%; 
-    width: 200%; 
-    height: 200%;
-  }
-  #bg img {
-    position: absolute; 
-    top: 0; 
-    left: 0; 
-    right: 0; 
-    bottom: 0; 
-    margin: auto; 
-    min-width: 50%;
-    min-height: 50%;
-  }
-*/
-
-/*
-#bg{
-    position: fixed;
-    top: 0;
-    left: 0;
-
-    min-width: 100%;
-    min-height: 100%;
-}
-*/
-/*
-.main-content{
-    margin-top: 40px;
-    
-}
-*/
-
 .title{
     text-align: center;
 }
